# code

./: README
C++/miscellaneous_itk_programs/image_normalization/: CMakeLists.txt  main.cxx
C++/miscellaneous_itk_programs/image_stats/: CMakeLists.txt  main.cxx
C++/miscellaneous_itk_programs/image_threshold/: CMakeLists.txt  main.cxx
C++/tensor-studies/: README
C++/tensor-studies/EigenSpace/: CMakeLists.txt  main.cxx
C++/tensor-studies/Histogram/: CMakeLists.txt  main.cxx
C++/tensor-studies/VectorField/: CMakeLists.txt  main.cxx
C++/uncertainty/: CMakeLists.txt  functions.cxx  functions.h  main.cxx  test_vtk_vec_distribution_4.vtk
Matlab/Hough_transform/: Hough_transform_1.m  Hough_transform_2.m
Matlab/computer_vision/: README
Matlab/computer_vision/Camera_calibration/: calibration.m  select_points.m
Matlab/image_processing/: README
Matlab/image_processing/Snakes/: Snakes.m  select_points.m
Matlab/image_processing/image_registration/: affine_transformation.m  landmark_reg.m  pivot_gauss.m  rbf_1pt.m  rbf_nreg.m
python/DWI_header_processing/: README  text_file_processing.py
tcsh/fiber_processing/: fiber_transposition.script
tcsh/generate_QC_images/: README  check_generate.script  colorFA_QC_2-25-2.script  colorFA_QC_2-65-2.script  colorFA_QC_9-25-3.script  colorFA_QC_9-65-3.script  test_baseline.script
